--- a/projects/cheat-sheet.html
+++ b/projects/cheat-sheet.html
@@ -53,7 +53,7 @@
 	<br><br>
 	Ennumerables provide many helpful functions: Searching, Sorting, Conditional, Looping & more
 	<br><br>
-	<h3>Enumerable Searching</h3>
+	<h3>Examples of Enumerable Searching</h3>
 	<div class = "code">
 	array = [2,4,6,8]
 	<br><br>
@@ -74,10 +74,30 @@
 	=> [2,4]
 	<br>
 	// returns an array without any integers greater than 4
+	<br><br>
+	>> p array.find_all { |x| x % 4 == 0}
+	<br>
+	=> [4,8]
+	// returns an array with only the numbers where there are no remainders when divided by 4
 	</div>
-	
-
-
+	<h3>Examples of Enumerable Sorting</h3>
+	<div class = "code">
+	array = [3,6,"7", "4", "1"]
+	<br><br>
+	>> array.sort
+	<br>
+	=> ArgumentError: comparison of Fixnum with String failed
+	<br>
+	//This will yield an error because you tried to sort integers and strings and ruby can't tell what is larger or smaller.
+	<br><br>
+	// But, we can use an enumberable to solve this sorting
+	<br><br>
+	array.sort_by(|x| x.to_i)
+	<br>
+	=> ["1", 3, "4", 6, "7"]
+	<br>
+	// This yields a result because we first changed all strings to integers before sorting!
+	</div>
 
       	</section>
     	</main>
