--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="js/jquery.nivo.slider.pack.js"></script>
 
+<script>
+    $(window).load(function() {
+        $('#slider').nivoSlider({
+            directionNavHide: false,
+            captionOpacity: 1,
+            prevText: '<',
+            nextText: '>'
+        });
+    });
+</script>
+
 
 
 <!-- Navigation Bar -->
