--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script src="js/jquery.nivo.slider.pack.js"></script>
-
-<script>
+<script src="js/jquery.nivo.slider.pack.js">
     $(window).load(function() {
         $('#slider').nivoSlider({
             directionNavHide: false,
