--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <!-- Banner rotator -->
 <script language="JavaScript1.2">
 
-var howOften = 5; //number often in seconds to rotate
+var howOften = 10; //number often in seconds to rotate
 var current = 0; //start the counter at 0
 var ns6 = document.getElementById&&!document.all; //detect netscape 6
 
 // place your images, text, etc in the array elements here
 var items = new Array();
-    items[0]="<a href='link.htm' ><img alt='image0 (9K)' src=' /Images/image0.jpg' height='300' width='300' border='0' /></a>"; //a linked image
+    items[0]="<a href='https://dannyhwangca.github.io/contact.html' ><img alt='ASK Banner' src='http://imgur.com/rtIaVDO' border='0' /></a>"; //a linked image
     items[1]="<a href='link.htm'><img alt='image1 (9K)' src='/Images/image1.jpg' height='300' width='300' border='0' /></a>"; //a linked image
     items[2]="<a href='link.htm'><img alt='image2 (9K)' src='/Images/image2.jpg' height='300' width='300' border='0' /></a>"; //a linked image
 function rotater() {
