--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 <!-- Banner rotator -->
 <script language="JavaScript1.2">
 
-var howOften = 10; //number often in seconds to rotate
+var howOften = 5; //number often in seconds to rotate
 var current = 0; //start the counter at 0
 var ns6 = document.getElementById&&!document.all; //detect netscape 6
 
 // place your images, text, etc in the array elements here
 var items = new Array();
-    items[0]="<a href='https://dannyhwangca.github.io/contact.html' ><img alt='ASK Banner' src='https://i.imgur.com/pKJqYLJ.png' border='0' /></a>"; //a linked image
-    items[1]="<a href='link.htm'><img alt='image1 (9K)' src='/Images/image1.jpg' height='300' width='300' border='0' /></a>"; //a linked image
-    items[2]="<a href='link.htm'><img alt='image2 (9K)' src='/Images/image2.jpg' height='300' width='300' border='0' /></a>"; //a linked image
+    items[0]="<a href='https://dannyhwangca.github.io/contact.html' ><img alt='Intro Banner' src='https://i.imgur.com/pKJqYLJ.png' border='0' /></a>"; //a linked image
+    items[1]="<a href='https://dannyhwangca.github.io/contact.html'><img alt='ASK banner' src='http://i.imgur.com/IxcIZH1.png'  border='0' /></a>"; //a linked image
+    items[2]="<a href='https://dannyhwangca.github.io/about.html'><img alt='Coffee Banner' src='http://i.imgur.com/kSBLc6C.png' border='0' /></a>"; //a linked image
 function rotater() {
     document.getElementById("placeholder").innerHTML = items[current];
     current = (current==items.length-1) ? 0 : current + 1;
