--- a/enumerable-methods.html
+++ b/enumerable-methods.html
@@ -20,13 +20,9 @@
   
 <!-- Navigation bar end -->
 
-<!-- Header Section -->
-	<body>
-	    <div class="header">
-	        Welcome To My Blog Page!
-	    </div>
-	    
-<!-- Header Section end -->
+<!-- Blog line -->
+<div class = "line"></div>
+<!-- Eng blog line -->
 
 <!-- left Blog Post Bar -->
       <div class="leftbar"> 
@@ -89,7 +85,7 @@ This is useful if you want a non-destructive return of code!
 <!-- My picture Box (right) end-->
 
 <!-- Footer Section -->
-	<div class="footer">
+	<div class="blog-footer">
 		<a href="https://www.facebook.com/" target="_blank"><img class="footerimg" src="https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/facebook.png?raw=true" alt="FaceBook!"></a>
             	<a href="https://www.linkedin.com/in/DannyHwangCA" target="_blank"><img class="footerimg" src="https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/linkin.png?raw=true" alt="LinkedIn"></a>
             	<a href="https://github.com/DannyHwangCA" target="_blank"><img class="footerimg" src="https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/git-icon.png?raw=true" alt="Github!"></a>
