--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
   </td>
  </tr>
  <tr>
-  <td colspan="2" style="text-align:center; font-size:30px" >
+  <td colspan="2" style="text-align:center; font-size:30px;" >
    <input type="submit" value="Submit">
   </td>
 </tr>
