--- a/projects/index.html
+++ b/projects/index.html
@@ -29,7 +29,7 @@
 
 <!-- Middle Section -->
 
-<div class="middlesection"
+<div class="middlesection-compact"
 
 <h3><b></b>Projects</b></h3>
 <br><br>
