--- a/projects/cheat-sheet.html
+++ b/projects/cheat-sheet.html
@@ -6,14 +6,14 @@
 
 	<link rel="stylesheet" type="/text/css" href="../stylesheets/default.css">
 	<link rel="stylesheet" type="/text/css" href="../stylesheets/blog.css">
-
-<!-- Header Section -->
 	<body>
-	    <div class="header">
-	        DevBootCamp Cheet Sheet Page!
-	    </div>
+
+
+<!-- Blog line -->
+<div class = "line"></div>
+<!-- Eng blog line -->
 	    
-<!-- Header Section end -->
+
 
 <!-- Navigation Bar -->
      	<div class="nav">
